# solar_ha_processing

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  chromosphere_defaults_16bit.toml  chromosphere_defaults_8bit.toml  location.sh  photosphere_defaults_16bit.toml  photosphere_defaults_8bit.toml  prominance_defaults_16bit.toml  prominance_defaults_8bit.toml  run.sh  run_183.sh  run_moon.sh  run_moon_preprocess.sh  run_saturn_183.sh  run_sun_preprocess.sh
src/: astro.rs  binfilereader.rs  constants.rs  debayer.rs  drizzle.rs  enums.rs  error.rs  fpmap.rs  guassianblur.rs  imagebuffer.rs  imagerot.rs  ldcorrect.rs  lib.rs  lunar.rs  mean.rs  medianblur.rs  parallacticangle.rs  params.rs  path.rs  point.rs  print.rs  processing.rs  quality.rs  rgbimage.rs  ser.rs  solar.rs  stats.rs  threshtest.rs  timestamp.rs  unsharp.rs  util.rs
testdata/: Sun_150729.ser  Sun_150729.txt
tests/: astro.rs  binfilereader.rs  ser.rs  solar.rs
