[package]
name = "solar_ha_processing"
version = "0.1.0"
authors = ["Kevin M. Gill <kmsmgill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "solar_ha_processing"

[[bin]]
name = "ser_info"
path = "bin/ser_info.rs"

[[bin]]
name = "ser_extract_frame"
path = "bin/ser_extract_frame.rs"

[[bin]]
name = "ser_extract"
path = "bin/ser_extract.rs"

[[bin]]
name = "ser_mean"
path = "bin/ser_mean.rs"

[[bin]]
name = "process_ha"
path = "bin/process_ha.rs"

[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
clap = "2.33.3"
serde_json = "1.0.64"
const_format = "0.2.14"
platforms = "1.1.0"
toml = "0.5.8"
serde = { version = "1.0.125", features = ["derive"] }
sscanf = "0.1.1"
string-builder = "0.2.0"
memmap = "0.7.0"
astro = "2.0.0"
sun = "0.2.0"
chrono = "0.4.19"
fastblur = "0.1.1"
rayon = "1.5.1"

