[package]
name = "solar_ha_processing"
version = "0.4.0"
authors = ["Kevin M. Gill <apoapsys@gmail.com>"]
edition = "2021"
description = "A set of utilities and a pipeline for processing raw hydrogen-alpha solar imaging using lucky imaging"
repository = "https://github.com/kmgill/solar_ha_processing"
readme = "README.md"
keywords = ["sun", "astrophotography", "science"]
license = "MIT" 

[package.metadata.deb]
maintainer = "Kevin M. Gill <apoapsys@gmail.com>"
copyright = "2021, Kevin M. Gill <apoapsys@gmail.com>"
license-file = ["LICENSE", "2"]
extended-description = "A set of utilities and a pipeline for processing raw hydrogen-alpha solar imaging using lucky imaging" 
depends = "$auto"
section = "science"
priority = "optional"
assets = [
    ["target/release/ha_add", "usr/bin/", "755"],
    ["target/release/ha_subtract", "usr/bin/", "755"],
    ["target/release/process_ha", "usr/bin/", "755"],
    ["target/release/ser_extract_frame", "usr/bin/", "755"],
    ["target/release/ser_extract", "usr/bin/", "755"],
    ["target/release/ser_info", "usr/bin/", "755"],
    ["target/release/ser_mean", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/solar_ha_processing/README", "644"],
    ["masks/*png", "usr/share/solar_ha_processing/masks/", "644"]
]


[lib]
name = "solar_ha_processing"

[[bin]]
name = "ser_info"
path = "bin/ser_info.rs"

[[bin]]
name = "ser_extract_frame"
path = "bin/ser_extract_frame.rs"

[[bin]]
name = "ser_extract"
path = "bin/ser_extract.rs"

[[bin]]
name = "ser_mean"
path = "bin/ser_mean.rs"

[[bin]]
name = "process_ha"
path = "bin/process_ha.rs"

[[bin]]
name = "ha_add"
path = "bin/ha_add.rs"

[[bin]]
name = "ha_subtract"
path = "bin/ha_subtract.rs"

[[bin]]
name = "ha_composite"
path = "bin/ha_composite.rs"

[[bin]]
name = "ha_frame_stats"
path = "bin/ha_frame_stats.rs"

[dependencies]
image = "0.24.1"
imageproc = "0.23.0"
clap = "2.33.3"
memmap = "0.7.0"
astro = "2.0.0"
sun = "0.2.0"
chrono = "0.4.19"
fastblur = "0.1.1"
rayon = "1.5.1"
sciimg = "0.2.3"
#sciimg = { path = "../sciimg" }
toml = "0.5.8"
serde = { version = "1.0.125", features = ["derive"] }
astral = {  git="https://github.com/kmgill/astral" }