[package]
name = "solhat"
version = "0.5.0"
authors = ["Kevin M. Gill <apoapsys@gmail.com>"]
edition = "2021"
description = "Solar Hydrogen Alpha Telescope: A set of utilities and a pipeline for processing raw hydrogen-alpha solar imaging using lucky imaging"
repository = "https://github.com/kmgill/solar_ha_processing"
readme = "README.md"
keywords = ["sun", "astrophotography", "science"]
license = "MIT" 

[package.metadata.deb]
maintainer = "Kevin M. Gill <apoapsys@gmail.com>"
copyright = "2022, Kevin M. Gill <apoapsys@gmail.com>"
license-file = ["LICENSE", "2"]
extended-description = "A set of utilities and a pipeline for processing raw hydrogen-alpha solar imaging using lucky imaging" 
depends = "$auto"
section = "science"
priority = "optional"
assets = [
    ["target/release/ha_add", "usr/bin/", "755"],
    ["target/release/ha_subtract", "usr/bin/", "755"],
    ["target/release/process_ha", "usr/bin/", "755"],
    ["target/release/ser_extract_frame", "usr/bin/", "755"],
    ["target/release/ser_extract", "usr/bin/", "755"],
    ["target/release/ser_info", "usr/bin/", "755"],
    ["target/release/ser_mean", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/solar_ha_processing/README", "644"],
    ["masks/*png", "usr/share/solar_ha_processing/masks/", "644"]
]


[lib]
name = "solhat"

[[bin]]
name = "solha"
path = "bin/solha.rs"

[dependencies]
image = "0.24.1"
imageproc = "0.23.0"
clap = { version = "3.2.4", features = ["derive"] }
memmap = "0.7.0"
astro = "2.0.0"
sun = "0.2.0"
chrono = "0.4.19"
fastblur = "0.1.1"
rayon = "1.5.3"
#sciimg = "0.4.0"
sciimg = { path = "sciimg" }
toml = "0.5.8"
serde = { version = "1.0.125", features = ["derive"] }
astral = {  git="https://github.com/kmgill/astral" }
wild = "2.0.4"
num_cpus = "1.13.1"